--- a/task1.html
+++ b/task1.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="stylesheet" href="chapter9.css"/>
+    <link rel="stylesheet" href="task1.css"/>
     <title>Chapter9,2</title>
   </head>
   
